--- a/Pages/History.razor
+++ b/Pages/History.razor
@@ -5,8 +5,10 @@
 @using IdentityModel;
 @using IdentityModel.Client;
 @inject HttpClient Http
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
-<PageTitle>Games history for </PageTitle>
+
+<PageTitle>Games history for user @(async() => await GetUserEmail())</PageTitle>
 
 <h1>Games history</h1>
 
@@ -57,5 +59,12 @@ else if (userGames.Count() > 0)
             userGames = new List<GameDTO>();
         }
 
+    }
+
+    private async Task<string> GetUserEmail()
+    {
+        var state = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+
+        return state.User?.Identity?.Name!;
     }
 }
