--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/newGame/{GameId:int}"
+﻿@page "/newGame"
+@page "/newGame/{GameId:int}"
 @using System.Net.Http.Json
 @using TamboliyaLibrary.DAL
 @using TamboliyaLibrary.Models
@@ -108,11 +109,13 @@
 
         if (GameId.HasValue && GameId > 0)
         {
+            //TODO:  room #19 - на земле ясности не должно быть функции бросить кубик, исправить ошибку
             await GetInfoAboutExistGame();
         }
 
         await base.OnInitializedAsync();
     }
+
 
     private async Task CreateNewGame()
     {
