--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,10 +13,10 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Головна
+                <span class="oi oi-home" aria-hidden="true"></span> Створити/приєднатися
             </NavLink>
             <NavLink class="nav-link" href="newGame">
-                <span class="oi oi-plus" aria-hidden="true"></span> Нова гра
+                <span class="oi oi-plus" aria-hidden="true"></span> Почати гру
             </NavLink>
         </div>
         <div class="nav-item px-3">
