--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -57,11 +57,11 @@
         }
         <p>@messageForEndGame</p>
     }
-    else if (GameId == null)
+@*    else if (GameId == null)
     {
         <input type="text" @bind-value="question" />
         <button type="button" class="btn btn-sm btn-success" onclick="@(async () => await CreateNewGame())">Start new game</button>
-    }
+    }*@
 </div>
 
 @if (GameId > 0)
@@ -126,33 +126,33 @@
     }
 
 
-    private async Task CreateNewGame()
-    {
-        if (!String.IsNullOrEmpty(question))
-        {
-            OracleDTO? gameOracle = null;
-            try
-            {
-                gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
+    //private async Task CreateNewGame()
+    //{
+    //    if (!String.IsNullOrEmpty(question))
+    //    {
+    //        OracleDTO? gameOracle = null;
+    //        try
+    //        {
+    //            gameOracle = await Http.GetFromJsonAsync<OracleDTO>($"api/Game/new?question={question}");
 
-            }
-            catch (Exception ex)
-            {
-                Console.WriteLine(ex);
-            }
+    //        }
+    //        catch (Exception ex)
+    //        {
+    //            Console.WriteLine(ex);
+    //        }
 
-            GameId = gameOracle!.GameId;
-            pathToImage = gameOracle!.PathToImage;
-            RegionOnMap = gameOracle!.RegionOnMap;
-            PositionNumber = gameOracle!.StepOnPath;
-            if (pathToImage != null)
-            {
-                var newGameposition = new GamePosition(gameOracle.Coordinates.x, gameOracle.Coordinates.y, pathToImage);
-                await MoveFigure(newGameposition);
-                await GetLog();
-            }
-        }
-    }
+    //        GameId = gameOracle!.GameId;
+    //        pathToImage = gameOracle!.PathToImage;
+    //        RegionOnMap = gameOracle!.RegionOnMap;
+    //        PositionNumber = gameOracle!.StepOnPath;
+    //        if (pathToImage != null)
+    //        {
+    //            var newGameposition = new GamePosition(gameOracle.Coordinates.x, gameOracle.Coordinates.y, pathToImage);
+    //            await MoveFigure(newGameposition);
+    //            await GetLog();
+    //        }
+    //    }
+    //}
 
     private async Task GetInfoAboutExistGame()
     {
