--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,12 +1,15 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
+﻿@using IdentityModel;
+@using IdentityModel.Client;
+@using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Authorization
+@using Newtonsoft.Json;
 @using System.Web
 @using System.Net.Http
 @using System.Net.Http.Json
